; ModuleID = '/home/carl/AnghaBench/linux/drivers/nvme/host/extr_fc.c_nvme_fc_term_aen_ops.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nvme/host/extr_fc.c_nvme_fc_term_aen_ops.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvme_fc_ctrl = type { %struct.nvme_fc_fcp_op* }
%struct.nvme_fc_fcp_op = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }

@NVME_NR_AEN_COMMANDS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nvme_fc_ctrl*)* @nvme_fc_term_aen_ops to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nvme_fc_term_aen_ops(%struct.nvme_fc_ctrl* %0) #0 {
  %2 = alloca %struct.nvme_fc_ctrl*, align 8
  %3 = alloca %struct.nvme_fc_fcp_op*, align 8
  %4 = alloca i32, align 4
  store %struct.nvme_fc_ctrl* %0, %struct.nvme_fc_ctrl** %2, align 8
  %5 = load %struct.nvme_fc_ctrl*, %struct.nvme_fc_ctrl** %2, align 8
  %6 = getelementptr inbounds %struct.nvme_fc_ctrl, %struct.nvme_fc_ctrl* %5, i32 0, i32 0
  %7 = load %struct.nvme_fc_fcp_op*, %struct.nvme_fc_fcp_op** %6, align 8
  store %struct.nvme_fc_fcp_op* %7, %struct.nvme_fc_fcp_op** %3, align 8
  store i32 0, i32* %4, align 4
  br label %8

8:                                                ; preds = %31, %1
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @NVME_NR_AEN_COMMANDS, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %36

12:                                               ; preds = %8
  %13 = load %struct.nvme_fc_fcp_op*, %struct.nvme_fc_fcp_op** %3, align 8
  %14 = getelementptr inbounds %struct.nvme_fc_fcp_op, %struct.nvme_fc_fcp_op* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %12
  br label %31

19:                                               ; preds = %12
  %20 = load %struct.nvme_fc_ctrl*, %struct.nvme_fc_ctrl** %2, align 8
  %21 = load %struct.nvme_fc_fcp_op*, %struct.nvme_fc_fcp_op** %3, align 8
  %22 = call i32 @__nvme_fc_exit_request(%struct.nvme_fc_ctrl* %20, %struct.nvme_fc_fcp_op* %21)
  %23 = load %struct.nvme_fc_fcp_op*, %struct.nvme_fc_fcp_op** %3, align 8
  %24 = getelementptr inbounds %struct.nvme_fc_fcp_op, %struct.nvme_fc_fcp_op* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32*, i32** %25, align 8
  %27 = call i32 @kfree(i32* %26)
  %28 = load %struct.nvme_fc_fcp_op*, %struct.nvme_fc_fcp_op** %3, align 8
  %29 = getelementptr inbounds %struct.nvme_fc_fcp_op, %struct.nvme_fc_fcp_op* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  store i32* null, i32** %30, align 8
  br label %31

31:                                               ; preds = %19, %18
  %32 = load i32, i32* %4, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %4, align 4
  %34 = load %struct.nvme_fc_fcp_op*, %struct.nvme_fc_fcp_op** %3, align 8
  %35 = getelementptr inbounds %struct.nvme_fc_fcp_op, %struct.nvme_fc_fcp_op* %34, i32 1
  store %struct.nvme_fc_fcp_op* %35, %struct.nvme_fc_fcp_op** %3, align 8
  br label %8

36:                                               ; preds = %8
  ret void
}

declare dso_local i32 @__nvme_fc_exit_request(%struct.nvme_fc_ctrl*, %struct.nvme_fc_fcp_op*) #1

declare dso_local i32 @kfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
